# otus-c-2022-09-Andrej_Ogurcov

./: README.md
HW-04/: main.c
HW1/: README.txt  main.c
HW10/: CMakeLists.txt
HW10/src/: main.c
HW12/: CMakeLists.txt
HW12/src/: main.c
HW14/: CMakeLists.txt  sqlite.db
HW14/src/: main.c
HW15/: CMakeLists.txt
HW15/src/: main.c
HW2/: encoder_utf8.c
HW4/: CMakeLists.txt  README.md  makefile
SDS/: parser_5_3.ino
src/: main.c
